--- a/index.html
+++ b/index.html
@@ -1,37 +1,77 @@
 <!DOCTYPE html>
 <html lang="en-us">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>About Me</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
 
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>About Me</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./assets/css/style.css">
-    </head>
-
-    <div class="top-nav">
-            <h1>Hannah Yudkin</h1>
-            <div class="links">
-                <span>
-                    <a href="index.html">About</a>
-                </span>
-                <span>
-                    <a href="portfolio.html">Portfolio</a>
-                </span>
-                <span>
-                    <a href="contact.html">Contact</a>
-                </span>
-            </div>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand name" href="#">Hannah Yudkin</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ml-auto">
+          <a class="nav-item nav-link active" href="#"
+            >About <span class="sr-only">(current)</span></a
+          >
+          <a class="nav-item nav-link" href="#">Portfolio</a>
+          <a class="nav-item nav-link" href="#">Contact</a>
         </div>
+      </div>
+    </nav>
+  </header>
 
-        <div class="portfolio content">
-            <h2>Portfolio</h2>
-            <img src="assets/images/" alt="Hangman">
-            <img src="assets/images/" alt="RPG Game">
-            <img src="assets/images/" alt="Trivia Game">
-            <img src="assets/images/" alt="Rutgers Info Widget">
-            <img src="assets/images/" alt="Rock Paper Scissors">
-        </div>
-    </body>
+  <body>
+    <div class="card">
+      <h5 class="card-title">About Me</h5>
+      <img class="portrait" src="assets/images/profile-photo.jpg" alt="Hannah Yudkin">
+      <div class="card-body">
+        <p1>
+          Hello! My name is Hannah Yudkin. I graduated the University of New Hampshire in 2018 with a degree in Marking and a degree in Computer Information Systems. I really like programming and plan on one day getting a Masters degree in Computer Science. 
+        </p1>
+
+        <br>
+        <br>
+
+        <p1>
+          One of my favorite things to do is bake. My specialties are cupcakes and I really like to making pretty designs and try new flavors. I spend a lot of my free time playing videogames, mostly cool indie games, or being active. I like to bike and have done a Tough Mudder in the past.
+        </p1>
+
+        <br>
+        <br>
+
+        <p1>
+            After I finish this course I'm planning on getting a job right afterwards. I'm a very motivated, driven person and have high aspirations. I'm hoping to learn the skills necessary to be sucessful in this field. 
+        </p1>
+      </div>
+    </div>
+
+
+
+
+
+    <nav class="navbar fixed-bottom navbar-dark bg-dark footer">
+      <a class="navbar-brand footer text-center" href="#">Copyright &#169</a>
+    </nav>
+  </body>
 </html>
