--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,29 @@
     ></script>
   </head>
 
-
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand name" href="#">Hannah Yudkin</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ml-auto">
+          <a class="nav-item nav-link" href="index.html" >About </a>
+          <a class="nav-item nav-link active" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="contact.html">Contact</a>
+        </div>
+      </div>
+    </nav>
+  </header>
 
     <div id="portfolio-carousel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
@@ -58,7 +80,7 @@
             alt="Assignment 2"
           />
           <div class="carousel-caption d-none d-md-block">
-            <h5>RPG Gam</h5>
+            <h5>RPG Game</h5>
           </div>
         </div>
         <div class="carousel-item">
