--- a/contact.html
+++ b/contact.html
@@ -9,35 +9,68 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
+
 <header>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand name" href="#">Hannah Yudkin</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ml-auto">
-              <a class="nav-item nav-link" href="index.html" >About </a>
-              <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-              <a class="nav-item nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
-            </div>
-          </div>
-        </nav>
-      </header>
-</header>
-
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand name" href="#">Hannah Yudkin</a>
+        <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+        >
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ml-auto">
+            <a class="nav-item nav-link" href="index.html" >About </a>
+            <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-item nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+        </div>
+        </div>
+    </nav>
+    </header>
 
 <body>
-    
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-1 col-md-1 col-lg-2"></div>
+      <div class="col-sm-10 col-m-10 col-lg-9">
+        <div class="container content">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="jumbotron text-wrap border border-light mt-5">
+        <div class="form-group">
+            <label for="NameInput">Name</label>
+            <input type="name" class="form-control" id="NameInput" aria-describedby="nameHelp" placeholder="Jane Doe">
+          </div>
+        <div class="form-group">
+          <label for="EmailInput">Email address</label>
+          <input type="email" class="form-control" id="EmailInput" aria-describedby="emailHelp" placeholder="example@gmail.com">
+        </div>
+        <div class="form-group">
+            <label for="Textarea">Message</label>
+            <textarea class="form-control" id="Textarea" rows="5"></textarea>
+          </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+    <nav class="navbar fixed-bottom navbar-dark bg-dark footer">
+        <a class="navbar-brand footer" href="#">Copyright &#169</a>
+    </nav>
 </body>
 </html>
