--- a/portfolio.html
+++ b/portfolio.html
@@ -53,89 +53,96 @@
       </div>
     </nav>
   </header>
+  <body>
+    <div class='col-sm-2 col-md-6 col-lg-12'>
+      <div id="portfolio-carousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#portfolio-carousel" data-slide-to="0" class="active" ></li>
+          <li data-target="#portfolio-carousel" data-slide-to="1"></li>
+          <li data-target="#portfolio-carousel" data-slide-to="2"></li>
+          <li data-target="#portfolio-carousel" data-slide-to="3"></li>
+          <li data-target="#portfolio-carousel" data-slide-to="4"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="./assets/images/placeholder.jpg"
+              class="d-block w-100"
+              alt="Assignement 1"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Hangman</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./assets/images/placeholder.jpg"
+              class="d-block w-100"
+              alt="Assignment 2"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>RPG Game</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="assets/images/placeholder.jpg"
+              class="md-block w-100"
+              alt="Assignment 3"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Trivia Game</h5>
+            </div>
+          </div>
 
-    <div id="portfolio-carousel" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#portfolio-carousel" data-slide-to="0" class="active" ></li>
-        <li data-target="#portfolio-carousel" data-slide-to="1"></li>
-        <li data-target="#portfolio-carousel" data-slide-to="2"></li>
-        <li data-target="#portfolio-carousel" data-slide-to="3"></li>
-        <li data-target="#portfolio-carousel" data-slide-to="4"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            src="./assets/images/placeholder.jpg"
-            class="d-block w-100"
-            alt="Assignement 1"
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Hangman</h5>
+          <div class="carousel-item">
+            <img
+              src="assets/images/placeholder.jpg"
+              class="md-block w-100"
+              alt="Assignment 4"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Rutgers Info Widget</h5>
+            </div>
           </div>
-        </div>
-        <div class="carousel-item">
-          <img
-            src="./assets/images/placeholder.jpg"
-            class="d-block w-100"
-            alt="Assignment 2"
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>RPG Game</h5>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img
-            src="assets/images/placeholder.jpg"
-            class="md-block w-100"
-            alt="Assignment 3"
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Trivia Game</h5>
-          </div>
-        </div>
 
-        <div class="carousel-item">
-          <img
-            src="assets/images/placeholder.jpg"
-            class="md-block w-100"
-            alt="Assignment 4"
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Rutgers Info Widget</h5>
+          <div class="carousel-item">
+            <img
+              src="assets/images/placeholder.jpg"
+              class="md-block w-100"
+              alt="Assignment 5"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Rock Paper Scissors</h5>
+            </div>
           </div>
-        </div>
+        <div>
+          <a
+            class="carousel-control-prev"
+            href="#portfolio-carousel"
+            role="button"
+            data-slide="prev"
+          >
+            <span class="carousel-control-prev-icon"></span>
+            <span class="sr-only">Previous</span>
+          </a>
 
-        <div class="carousel-item">
-          <img
-            src="assets/images/placeholder.jpg"
-            class="md-block w-100"
-            alt="Assignment 5"
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Rock Paper Scissors</h5>
-          </div>
+          <a
+            class="carousel-control-next"
+            href="#portfolio-carousel"
+            role="button"
+            data-slide="next"
+          >
+            <span class="carousel-control-next-icon"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-      <div>
-        <a
-          class="carousel-control-prev"
-          href="#portfolio-carousel"
-          role="button"
-          data-slide="prev"
-        >
-          <span class="carousel-control-prev-icon"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-
-        <a
-          class="carousel-control-next"
-          href="#portfolio-carousel"
-          role="button"
-          data-slide="next"
-        >
-          <span class="carousel-control-next-icon"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
     </div>
+
+    <nav class="navbar fixed-bottom navbar-dark bg-dark footer">
+      <a class="navbar-brand footer" href="#">Copyright &#169</a>
+    </nav>
   </body>
+  >
 </html>
