--- a/contact2.html
+++ b/contact2.html
@@ -39,31 +39,21 @@
 
     <!-- Page Layout here -->
     <div class="row">
-
-        <div class="col left-col s12 m4 l3"> <!-- Note that "m4 l3" was added -->
+        <div class="col left-col s12 m4 l3"> 
             <h3>Content!</h3>
-          <!-- Grey navigation panel
-  
-                This content will be:
-            3-columns-wide on large screens,
-            4-columns-wide on medium screens,
-            12-columns-wide on small screens  -->
-  
         </div>
-  
         <div class="col right-col s12 m8 l9">
             <h3>More Content!</h3>
-          <!-- Teal page content
-            
-  
-                This content will be:
-            9-columns-wide on large screens,
-            8-columns-wide on medium screens,
-            12-columns-wide on small screens  -->
-  
         </div>
-  
       </div>
+    <div class="row">
+        <div class="col"></div>
+        <div class="col"></div>
+    </div>
+    <div class="row">
+        <div class="col"></div>
+        <div class="col"></div>
+    </div>
 </main>
 
 
