--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,7 @@
     <link>
 
     <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="./assets/css/style2.css"/>
 </header>
@@ -36,43 +37,37 @@
 
     <!-- Page Layout here -->
     <div class="row">
-            <div class="col s12 m7 l3">
-              <div class="card">
-                <div class="card-image">
-                  <img src="images/sample-1.jpg">
-                  <span class="card-title">Card Title</span>
-                </div>
-                  <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                  </div>
-                  <div class="card-tabs">
-                    <ul class="tabs tabs-fixed-width">
-                      <li class="tab"><a href="#test4">Email</a></li>
-                      <li class="tab"><a class="active" href="#test5">LinkedIn</a></li>
-                      <li class="tab"><a href="#test6">Github</a></li>
-                    </ul>
-                  </div>
-                  <div class="card-content grey lighten-4">
-                    <div id="test4">HannahYudkin@gmail.com</div>
-                    <div id="test5">Test 2</div>
-                    <div id="test6">Test 3</div>
-                  </div>
-                </div>
-  
-        <div class="col right-col s12 m8 l9">
-            <h3>More Content!</h3>
-          <!-- Teal page content
-            
-  
-                This content will be:
-            9-columns-wide on large screens,
-            8-columns-wide on medium screens,
-            12-columns-wide on small screens  -->
-  
+      <div class="col s12 m7 l4">
+        <div class="card">
+          <div class="card-image">
+            <img src="assets/images/profile-photo.jpg">
+            <span class="card-title">Kick-Ass Bitch</span>
+          </div>
+          <div class="card-content">
+            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          </div>
+          <div class="card-tabs">
+            <ul class="tabs tabs-fixed-width">
+              <li class="tab"><a href="#test4">Email</a></li>
+              <li class="tab"><a class="active" href="#test5">LinkedIn</a></li>
+              <li class="tab"><a href="#test6">Github</a></li>
+              <li class="tab"><a href="#test7">Phone</a></li>
+            </ul>
+          </div>
+          <div class="card-content grey lighten-4">
+            <div id="test4">HannahYudkin@gmail.com</div>
+            <div id="test5">www.linkedin.com/in/hannahyudkin</div>
+            <div id="test6">https://github.com/HannahYudkin</div>
+            <div id="test7">(603) 921-0450</div>
+          </div>
         </div>
-  
+      <div class="col right-col s12 m8 l8">
+        <h3>More Content!</h3>
       </div>
-</main>
+      
+  
+    </div>
+  </main>
 
 
 <footer class="page-footer">
@@ -86,7 +81,10 @@
   </div>
 </footer>
 
-
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
