--- a/portfolio2.html
+++ b/portfolio2.html
@@ -39,9 +39,12 @@
 
     <!-- Page Layout here -->
     <div class="row">
+        <h1>Current Projects</h1>
+    </div>
+    <div class="row">
 
         <div class="col left-col s12 m4 l3"> <!-- Note that "m4 l3" was added -->
-            <h3>Content!</h3>
+            <h3>Kill me please.</h3>
           <!-- Grey navigation panel
   
                 This content will be:
@@ -52,7 +55,7 @@
         </div>
   
         <div class="col right-col s12 m8 l9">
-            <h3>More Content!</h3>
+            <h3>Guys I really don't wannt do this.</h3>
           <!-- Teal page content
             
   
@@ -60,10 +63,6 @@
             9-columns-wide on large screens,
             8-columns-wide on medium screens,
             12-columns-wide on small screens  -->
-  
-        </div>
-  
-      </div>
 </main>
 
 
